# LuminaX

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Assets/Shaders/: LightingUtil.hlsl  blur.hlsl  brdf.hlsl  common.hlsl  diffuseIBL.hlsl  sky.hlsl
LuminaX/: Application.cpp  Application.h  BlurFilter.cpp  BlurFilter.h  Buffers.cpp  Buffers.h  CMakeLists.txt  Camera.cpp  Camera.h  CubeRenderTarget.cpp  CubeRenderTarget.h  DemoApp.cpp  DemoApp.h  FrameResource.cpp  FrameResource.h  GraphicsUtil.cpp  GraphicsUtil.h  LuminaX.cpp  MeshGenerator.cpp  MeshGenerator.h
LuminaX/Shaders/: color.hlsl
